force-app/main/default/objects/Edfund_Facility_Contact_Affiliation__c/Edfund_Facility_Contact_Affiliation__c.object-meta.xml
<CustomObject>
    <label>Edfund Facility Contact Affiliation</label>
    <nameField>
        <displayFormat>EF-{0000}</displayFormat>
        <label>Edfund Facility Contact Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Edfund Facility Contact Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>