force-app/main/default/objects/Edfund_Facility_Contact_Affiliation__c/fields/EdFund_Contact__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Contact__c</fullName>
    <label>EdFund Contact</label>
    <referenceTo>EdFund_Facility_Contact__c</referenceTo>
    <relationshipLabel>Edfund Facility Contact Affiliations</relationshipLabel>
    <relationshipName>Edfund_Facility_Contact_Affiliations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>