force-app/main/default/objects/Edfund_Facility_Contact_Affiliation__c/fields/EdFund_Facilities__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Facilities__c</fullName>
    <label>EdFund Facilities</label>
    <referenceTo>EdFund_Facilites__c</referenceTo>
    <relationshipLabel>Edfund Facility Contact Affiliations</relationshipLabel>
    <relationshipName>Edfund_Facility_Contact_Affiliations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>