force-app/main/default/objects/Edfund_Facility_Contact_Affiliation__c/fields/Facility_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_Type__c</fullName>
    <label>Facility Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Facility_Contact_Type_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>DSD</fullName>
            </value>
            <value>
                <fullName>DON</fullName>
            </value>
            <value>
                <fullName>Organizer/Union Rep</fullName>
            </value>
            <value>
                <fullName>Steward</fullName>
            </value>
            <value>
                <fullName>TF Rep</fullName>
            </value>
            <value>
                <fullName>Kitchen Supervisor</fullName>
            </value>
            <value>
                <fullName>Executive Director</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Nurse Practice Educator (NPE)</fullName>
            </value>
            <value>
                <fullName>Staff Development Coordinator (SDC)</fullName>
            </value>
            <value>
                <fullName>Business Office Manager</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Regional Director</fullName>
            </value>
            <value>
                <fullName>NPE</fullName>
            </value>
            <value>
                <fullName>Maintenance Manager</fullName>
            </value>
            <value>
                <fullName>HR Director</fullName>
            </value>
            <value>
                <fullName>Payroll Manager</fullName>
            </value>
            <value>
                <fullName>Regional Vice President of Operations</fullName>
            </value>
            <value>
                <fullName>Talent Acquisition Manager</fullName>
            </value>
            <value>
                <fullName>Vice President of Human Resources</fullName>
            </value>
            <value>
                <fullName>Human Resources Business Partner</fullName>
            </value>
            <value>
                <fullName>CPO</fullName>
            </value>
            <value>
                <fullName>DSD Assistant</fullName>
            </value>
            <value>
                <fullName>Executive Vice-President</fullName>
            </value>
            <value>
                <fullName>Legal Counsel</fullName>
            </value>
            <value>
                <fullName>Test Contact Type</fullName>
            </value>
            <value>
                <fullName>Director of Nursing</fullName>
            </value>
            <value>
                <fullName>Test Contact Type for Owner</fullName>
            </value>
            <value>
                <fullName>Infection Preventionist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>